--- a/build.gradle
+++ b/build.gradle
@@ -2,27 +2,26 @@ buildscript {
 
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:7.2.2'
     }
 }
 
 ext {
     // Compilation (defined here to ensure consistency between the library and sample app)
-    compileSdkVersion = 28
-    buildToolsVersion = '28.0.3'
-    minSdkVersion = 14
-    targetSdkVersion = 28
-    javaVersion = JavaVersion.VERSION_1_7
+    compileSdkVersion = 33
+    minSdkVersion = 21
+    targetSdkVersion = 33
+    javaVersion = JavaVersion.VERSION_11
 }
 
 subprojects {
     repositories {
-        jcenter()
         google()
+        mavenCentral()
     }
 
     tasks.withType(Javadoc).all { enabled = false }
