--- a/tachyon-sample/src/main/AndroidManifest.xml
+++ b/tachyon-sample/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
 
         <activity
             android:name=".SampleActivity"
+            android:exported="true"
             android:label="@string/app_name"
             android:screenOrientation="portrait">
             <intent-filter>
